issues with propertymanager and loading all services.  Pushing changes to pull week 4 and run locally